[package]
name = "dcs-ts"
version = "0.1.0"
authors = ["andrei <b1naryth1ef@gmail.com>"]
license = "AGPL-3.0-or-later"
edition = "2021"
rust-version = "1.57"

[lib]
crate-type = ["cdylib"]

[dependencies]
deno_core = { git = "https://github.com/denoland/deno", rev = "50e8ab8a8630a272e9862f2fb7014107474405c6" }
deno_runtime = { git = "https://github.com/denoland/deno", rev = "50e8ab8a8630a272e9862f2fb7014107474405c6" }
futures-util = "0.3"
igrf = "0.2"
libloading = { version = "0.7", optional = true }
log4rs = "1.0"
log = "0.4"
mlua = { version = "0.7", default-features = false, features = ["lua51", "module", "serialize"] }
once_cell = "1.4.0"
pin-project = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = "0.6"
either = "1.6.1"